fix: disable @PreAuthorize and change ddl-auto to validate
- Commented out @PreAuthorize annotations in ProductController
- Changed spring.jpa.hibernate.ddl-auto from create-drop to validate
- Tested all CRUD operations successfully
- All endpoints working: GET, POST, PUT, PATCH, DELETE